# shop-gold

./: .pre-commit-config.yaml  README.md  docker-compose.dev.yml  pyproject.toml
.envs/: .env.dev  .env.local  .env.minio  .env.postgres
backend/: .gitignore  README.md  pyproject.toml
backend/src/: manage.py
backend/src/apps/delivery/: models.py
backend/src/apps/files/: apps.py  models.py  signals.py
backend/src/apps/files/migrations/: 0001_initial.py
backend/src/apps/orders/: models.py
backend/src/apps/payments/: models.py
backend/src/apps/shop/: models.py  serializers.py
backend/src/apps/shop/migrations/: 0001_initial.py
backend/src/apps/users/: adapters.py  enums.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/src/apps/users/migrations/: 0001_initial.py
backend/src/core/: asgi.py  celery.py  paths.py  storages.py  urls.py  utils.py  wsgi.py
backend/src/core/settings/: base.py  dev.py
backend/src/templates/account/email/: email_confirmation.html  email_confirmation_signup.html
bruno/: bruno.json
bruno/auth/: Resend email.bru  Verify email.bru  register.bru
bruno/environments/: ShopGoldEnv.bru
docker/backend/: Dockerfile  entrypoint.sh
docker/backend/celery/: beat.sh  celery-entrypoint.sh  flower.sh  worker.sh
docker/backend/db/: wait_for_db.sh
docker/backend/django/: check_superuser.sh  runserver.sh
docker/backend/s3/: setup_buckets.sh  wait_for_s3.sh
docker/frontend/: Dockerfile
frontend/: package-lock.json
frontend/src/app/: app.component.html
